<resources>
    <string name="app_name">Android Client</string>
    <string name="greeting">Hola {0}, te estaba esperando</string>
    <string name="cheering">Vamos {0}, ya te queda poco</string>
    <string name="cheering_start">Vamos {0}, ya puedes empezar</string>
    <string name="cheering_go_on">Continua así</string>
    <string name="cheering_well_done">Lo estás haciendo genial, sigue así.</string>
    <string name="cheering_excellent">¡Lo estás haciendo perfecto!\nAcabarás en seguida.</string>
    <string name="cheering_bad">Vaya, creo que no consigo entenderte, {0}</string>
    <string name="cheering_skipped_word">He saltado esa palabra dado que parece que cuesta pronunciarla. ¡Puedes continuar!</string>
    <string name="profileContent">El {4} lograste acabar {0} de {1} tareas, {2}, {3}</string>
    <string name="profileContent_today">{4} has logrado acabar {0} de {1} tareas, {2}, {3}</string>
    <string name="profileContent_0">puedes empezar cuando quieras.</string>
    <string name="profileContent_1to3">vamos, continua que tú puedes.</string>
    <string name="profileContent_4to5">sigue así, ya te queda poco.</string>
    <string name="profileContent_6">gran trabajo, mañana más.</string>
    <string name="topToolbarProfile_0">Parece que hoy aún no has empezado. ¿Te apetece hacer tu primer ejercicio ahora?</string>
    <string name="topToolbarProfile_1_5">Llevas un buen progreso hoy. ¡Sigue así!</string>
    <string name="topToolbarProfile_6">¡Madre mía! ¡¿Ya has acabado?! Excelente trabajo.</string>
    <string name="topToolbarProfile_generic">Este es tu progreso actual. ¡Sigue así!</string>
    <string name="profileContent_pastDate">bien hecho.</string>
    <string name="Today">Hoy</string>
    <string name="currentMaxTasksSize">6</string>
    <string name="timeReminderText">¿A que hora te gustaria que te recordara hacer tus ejercicios?</string>
    <string name="textDyslexia">¿Tienes problemas de lectura? Puedes probar a usar una fuente especial para personas que padecen dislexia y otros problemas de lectura.</string>
    <string name="textWantsReaderV2">¿Quieres que se te muestre una ayuda visual conforme vas leyendo en la pantalla de lectura?\n(Requiere uso de microfono)</string>
    <string name="textWantsFasterAnimations">¿Te distraen las animaciones? Habilita esto para quitar las animaciones de la aplicacion.</string>
    <string name="changeName">¿Quieres cambiar datos sobre ti?</string>
    <string name="applyTick">✓️</string>
    <string name="goBack">Volver</string>
    <string name="goSave">Guardar</string>
    <string name="yourNameIs">Tu nombre es…</string>
    <string name="yourSurnameIs">Tu apellido es…</string>
    <string name="loading">Loading…</string>
    <string name="achievedButtonText">Conseguido</string>
    <string name="congratulationsActivityMainText">Felicidades, ya tienes hecha la parte de {0}. Ahora continua con la siguiente parte. Animo que tu puedes</string>
    <string name="touchToContinue">Toca la pantalla para continuar</string>
    <string name="welcomeText">Hola, bienvenido a esta app, aqui te vamos a ayudar dia a dia a mejorar.\n\nA continuación configuraremos un perfil adaptado a ti para que disfrutes aún más de la aplicación.</string>
    <string name="continueText">Continuar</string>
    <string name="privacypolicyurl">https://it-terms.linuxct.space/</string>
    <string name="microsoftprivacypolicyurl">https://azure.microsoft.com/en-us/support/legal/cognitive-services-compliance-and-privacy/</string>
    <string name="applicationSectionNameReading">Lectura</string>
    <string name="applicationSectionNameLanguage">Lenguaje</string>
    <string name="applicationSectionNameAbstract">Pensamiento Abstracto</string>
    <string name="applicationSectionNameConcentration">Concentración</string>
    <string name="applicationSectionNamePraxias">Praxias</string>
    <string name="applicationSectionNamePerception">Percepción</string>
    <string name="applicationSectionNameMyProfile">Mi Perfil</string>
    <string name="applicationSectionNameSettings">Ajustes</string>
    <string name="notificationChannelName">EXERCISES</string>
    <string name="notificationChannelDesc">Este canal representa los recordatorios de hacer tus ejercicios</string>
    <string name="notificationChannelCaption">Recordatorios</string>
    <string name="notificationTitle">Recordatorio de tus ejercicios</string>
    <string name="notificationContent">¡Hola! ¿Te apetece hacer tus ejercicios diarios?</string>
    <string name="notificationActionOpen">¡Vamos!</string>
    <string name="notificationActionPostpone">Posponer</string>
    <string name="notificationPostponedSuccess">Pospuesto 5 minutos</string>
    <string name="undoChanges">Cambios deshechos</string>
    <string name="savedChanges">Cambios guardados</string>
    <string name="mustTellName">Debes decirme tu nombre para continuar</string>
    <string name="mustSetTime">Debes escoger una hora para tu recordatorios</string>
    <string name="setTimeText">Elige una hora</string>
    <string name="newTimeSet">Nueva hora fijada</string>
</resources>
